--- a/Desktop/Dwell-Up1/index.html
+++ b/Desktop/Dwell-Up1/index.html
@@ -67,14 +67,14 @@
         <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
           <div class="grid items-center grid-cols-1 gap-12 lg:grid-cols-2">
             <div>
-              <h1 class="text-4xl font-bold text-white sm:text-6xl lg:text-7xl">
+              <h1 class="text-4xl font-bold text-black sm:text-6xl lg:text-7xl">
                 Revolutionize your freelancing game with<br />
                 <div class="relative inline-flex">
                   <span
                     class="absolute inset-x-0 bottom-0 border-b-[30px] border-[#395B64]"
                   ></span>
                   <h1
-                    class="relative text-4xl font-bold text-white sm:text-6xl lg:text-7xl"
+                    class="relative text-4xl font-bold text-black sm:text-6xl lg:text-7xl"
                   >
                     WEB3
                   </h1>
